package app.domain.model;

public interface MaxSum {

    int[] maxSum(int[] array);

}
