@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0


class Company {
  -designation
}

interface MaxSum{

}


class Test{
-code
-nhscode
}

class Employee{

}


Company "1" -- "*" Test: does>

Company "1" -- "1" MaxSum : uses>

Company "1" -- "1..*" Employee : has>

Employee "1..*" -- "1..*" Test : analyse

@enduml